# installer

./: .gitignore  README.md  pyproject.toml
larapy_installer/: cli.py
larapy_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
larapy_installer/commands/: new.py  templates.py  versions.py
larapy_installer/utils/: git.py  validation.py
